<resources>
    <string name="app_name">BloodSugarTracker</string>
    <string name="string_title_bottomnav_chart">차트보기</string>
    <string name="string_title_bottomnav_add">추가하기</string>
    <string name="string_title_bottomnav_settings">설정</string>
    <string name="string_title_event_main">이벤트를 선택하세요</string>
    <string name="string_title_event_meal">식사 입력</string>
    <string name="string_title_event_glucose">혈당 측정</string>
    <string name="string_title_event_exercise">운동 후 혈당 측정</string>
    <string name="string_title_event_delete"><u>이벤트 지우기</u></string>

    <array name="array_string_event">
        <item name="meal">식사</item>
        <item name="glucose">혈당</item>
        <item name="exercise">운동</item>
    </array>
</resources>