<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.event.EventFragment"
        android:padding="10dp">

        <Button
            android:id="@+id/b_event_meal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHeight_percent=".3"
            android:text="@string/string_title_event_meal"/>

        <Button
            android:id="@+id/b_event_glucose"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/b_event_meal"
            app:layout_constraintHeight_percent=".3"
            android:text="@string/string_title_event_glucose"/>

        <Button
            android:id="@+id/b_event_exercise"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/b_event_glucose"
            app:layout_constraintHeight_percent=".3"
            android:text="@string/string_title_event_exercise"/>

        <TextView
            android:id="@+id/tv_event_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/b_event_exercise"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="10dp"
            android:text="@string/string_title_event_delete"
            android:textStyle="bold"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>