<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@+id/fragment_main_chart">

    <fragment
        android:id="@+id/fragment_main_chart"
        android:name="com.noweaj.android.bloodsugartracker.ui.ChartFragment"
        android:label="@string/string_title_bottomnav_chart"
        tools:layout="@layout/fragment_chart" />

    <!--
    EventFragment
    -->
    <fragment
        android:id="@+id/fragment_main_event"
        android:name="com.noweaj.android.bloodsugartracker.ui.event.EventFragment"
        android:label="@string/string_title_bottomnav_add"
        tools:layout="@layout/fragment_event" >

        <action
            android:id="@+id/action_main_event_to_event_add_time_event"
            app:destination="@id/fragment_event_add_time_event"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>

        <action
            android:id="@+id/action_main_event_to_event_delete"
            app:destination="@id/fragment_event_delete"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>

    </fragment>

    <fragment
        android:id="@+id/fragment_event_add_time_event"
        android:name="com.noweaj.android.bloodsugartracker.ui.event.EventAddTimeEventFragment"
        tools:layout="@layout/fragment_event_add_time_event">
        
        <action
            android:id="@+id/action_event_add_time_event_to_event_add_value_note"
            app:destination="@id/fragment_event_add_value_note"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>

        <argument
            android:name="eventEntity"
            app:argType="com.noweaj.android.bloodsugartracker.data.entity.EventEntity" />
        
    </fragment>

    <fragment
        android:id="@+id/fragment_event_add_value_note"
        android:name="com.noweaj.android.bloodsugartracker.ui.event.EventAddValueNoteFragment"
        tools:layout="@layout/fragment_event_add_value_note">
        
        <action
            android:id="@+id/action_event_add_value_note_to_chart_fragment"
            app:destination="@id/fragment_main_chart"
            app:popUpTo="@id/fragment_main_chart"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"/>

        <argument
            android:name="eventEntity"
            app:argType="com.noweaj.android.bloodsugartracker.data.entity.EventEntity" />

    </fragment>

    <fragment
        android:id="@+id/fragment_event_delete"
        android:name="com.noweaj.android.bloodsugartracker.ui.event.EventDeleteFragment"
        tools:layout="@layout/fragment_event_delete">
        
        <action
            android:id="@+id/action_event_delete_to_chart_fragment"
            app:destination="@id/fragment_main_chart"
            app:popUpTo="@id/fragment_main_chart"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"/>

        <argument
            android:name="noarg"
            app:argType="long"
            android:defaultValue="-1L"/>

    </fragment>
    
    <!--
    SettingsFragment
    -->
    <fragment
        android:id="@+id/fragment_main_settings"
        android:name="com.noweaj.android.bloodsugartracker.ui.settings.SettingsFragment"
        android:label="@string/string_title_bottomnav_settings"
        tools:layout="@layout/fragment_settings">

        <action
            android:id="@+id/action_main_settings_to_settings_chart_manager"
            app:destination="@id/fragment_settings_chart_manager"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"/>

        <action
            android:id="@+id/action_main_settings_to_settings_notification_manager"
            app:destination="@id/fragment_settings_notification_manager"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"/>
        
    </fragment>
    
    <fragment
        android:id="@+id/fragment_settings_chart_manager"
        android:name="com.noweaj.android.bloodsugartracker.ui.settings.SettingsChartManagerFragment"
        tools:layout="@layout/fragment_settings_chart_manager">
        
    </fragment>
    
    <fragment
        android:id="@+id/fragment_settings_notification_manager"
        android:name="com.noweaj.android.bloodsugartracker.ui.settings.SettingsNotificationManagerFragment"
        tools:layout="@layout/fragment_settings_notification_manager">
        
    </fragment>


</navigation>